Add comprehensive security and contribution guidelines
- Add CODEOWNERS file for automatic code review requests
- Enhance GitHub Actions workflow with security checks
- Add branch verification to prevent unauthorized publishing
- Create detailed CONTRIBUTING.md with development guidelines
- Add concurrency control for PyPI publishing workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,6 +10,11 @@ on:
         required: false
         type: string
 
+# Security: Only allow publishing from main branch
+concurrency:
+  group: pypi-publish
+  cancel-in-progress: false
+
 jobs:
   publish:
     name: Publish to PyPI
@@ -20,6 +25,14 @@ jobs:
       contents: read
     
     steps:
+    - name: Security check - Verify branch
+      run: |
+        if [ "${{ github.ref }}" != "refs/heads/main" ] && [ "${{ github.event_name }}" != "release" ]; then
+          echo "❌ Publishing is only allowed from main branch or releases"
+          exit 1
+        fi
+        echo "✅ Branch verification passed"
+
     - name: Checkout code
       uses: actions/checkout@v4
       with:
